Keep API key storage compatible with minSdk 29